--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,31 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Archivos de dependencias
+node_modules/
+dist/
+build/
+
+# Configuración de entorno
+.env
+.env.*.local
+
+# Archivos temporales
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 🛠 Archivos de herramientas
+.vscode/
+.idea/
+*.iml
+
+# Archivos de bloqueo de paquetes (opcional si no quieres controlar versiones exactas)
+package-lock.json
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
