--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "firebase": "^11.7.1",
+    "firebase-admin": "^13.3.0",
+    "mssql": "^11.0.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
