--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^11.7.1",
     "firebase-admin": "^13.3.0",
+    "lucide-react": "^0.511.0",
     "mssql": "^11.0.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
