--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "bootstrap": "^5.3.3",
     "firebase": "^11.7.1",
     "firebase-admin": "^13.3.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.511.0",
     "mssql": "^11.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
